--- a/pepe/src/main/resources/static/index.html
+++ b/pepe/src/main/resources/static/index.html
@@ -37,7 +37,9 @@
         });
     </script>
 
-    if (mensaje == "Websocket")
+    if (mensaje == "Websocket"){
+     s
+    }
 
     </body>
     </html>
